# Learn_Japanese_Gojuon

./: .gitignore  LICENSE  README.md  build.py  main.py  pyproject.toml
data/: hira_dict.json  kata_dict.json
